web commit by arpitjain11

--- a/doc/todo/Gallery.mdwn
+++ b/doc/todo/Gallery.mdwn
@@ -2,6 +2,7 @@ New Version of gallery is available now. Few more features have been added like 
 
 SVN repository of plugin is located at http://ned.snow-crash.org:8080/svn/ikiwiki-gallery
 --[[arpitjain]]
+--[[arpitjain]]
 ---- 
 
 creating a gallery of a bunch of images: 
