web commit by PatrickWinnertz: add information about where to download the plugin

--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -160,6 +160,9 @@ Mh... not really fixed :S I added it into the return but it is somehow ignored. 
 
 -----
 
+Okay, the last version of the tex plugin for ikiwiki can be downloaded [here](https://www.der-winnie.de/~winnie/gsoc07/tex.pm). 
+
+
 [[tag soc]]
 
 [[tag wishlist]]
