* Add color parameter to postsparkline. Closes: #438900

--- a/debian/changelog
+++ b/debian/changelog
@@ -42,8 +42,9 @@ ikiwiki (2.6) UNRELEASED; urgency=low
       (This was needed for compatability with a bug in CGI::FormBuilder
       3.0401, but ikiwiki already needs a newer version.)
   * Pass buttons to all other formbuilder_setup hooks too.
+  * Add color parameter to postsparkline. Closes: #438900
 
- -- Joey Hess <joeyh@debian.org>  Fri, 17 Aug 2007 01:19:44 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 20 Aug 2007 14:56:51 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
