* Add proper Homepage field to Debian package (needs uber-new dpkg).

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,8 +43,9 @@ ikiwiki (2.6) UNRELEASED; urgency=low
       3.0401, but ikiwiki already needs a newer version.)
   * Pass buttons to all other formbuilder_setup hooks too.
   * Add color parameter to postsparkline. Closes: #438900
+  * Add proper Homepage field to Debian package (needs uber-new dpkg).
 
- -- Joey Hess <joeyh@debian.org>  Mon, 20 Aug 2007 14:56:51 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 20 Aug 2007 16:21:05 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
