--- a/doc/users/TaylorKillian/discussion.mdwn
+++ b/doc/users/TaylorKillian/discussion.mdwn
@@ -1,1 +1,3 @@
 You're in Ohio.. I wonder if you've any plans to attend the Ohio LinuxFest this year. I've been thinking about going, and it would be nice to meet ikiwiki people. --[[Joey]]
+
+Yeah, definitely! I went last year, it was pretty cool. The only part I was disappointed about was the fact that one of speakers didn't show up (but we got to learn about mod_rewrite instead ;) . I'm only about 15 minutes away, so I have no excuse not to attend ;) --[[TaylorKillian]]
