web commit by tkillian

--- a/doc/todo/wikiwyg/discussion.mdwn
+++ b/doc/todo/wikiwyg/discussion.mdwn
@@ -50,4 +50,6 @@ A few observations, in approximate order of priority:
 
 --[[Joey]]
 
+Oh, by the way, let me know if I forgot to tarball anything. --[[TaylorKillian]] 
+
 [Javascript Compression]: http://javascriptcompressor.com/
