--- a/debian/changelog
+++ b/debian/changelog
@@ -44,8 +44,9 @@ ikiwiki (2.6) UNRELEASED; urgency=low
   * Pass buttons to all other formbuilder_setup hooks too.
   * Add color parameter to postsparkline. Closes: #438900
   * Add proper Homepage field to Debian package (needs uber-new dpkg).
+  * Add monotone support, contributed by William Uther.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 20 Aug 2007 16:21:05 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 20 Aug 2007 23:09:11 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
