--- a/doc/bugs/Monotone_rcs_support.mdwn
+++ b/doc/bugs/Monotone_rcs_support.mdwn
@@ -31,3 +31,13 @@ Note: This patch requires a rather recent Monotone perl module (18 August 2007 o
 >> erg... sorry, fixed.
 
 [[tag patch]]
+
+>> I've [[accepted|done]] this patch, thank you! 
+>> 
+>> I did make a few changes. Please review, and make sure it still works
+>> (a test case like we have for some of the other RCSes would be nice..)
+>> 
+>> BTW, will all the monotone output parsing work if LANG != C?
+>> 
+>> Do monotone post-commit hooks actually use REV?
+>> --[[Joey]]
