reorg all the pages about rcs backends. Fix all links

--- a/doc/bugs/Monotone_rcs_support.mdwn
+++ b/doc/bugs/Monotone_rcs_support.mdwn
@@ -1,6 +1,6 @@
 #Ikiwiki plugin for the Monotone revision control system.
 
-I've just made a patch to the ikiwiki code that allows it to use the [Monotone](http://monotone.ca/) revision control system.  It is available at:
+I've just made a patch to the ikiwiki code that allows it to use the [[rcs/Monotone]] revision control system.  It is available at:
 
 <http://www.cse.unsw.edu.au/~willu/monotone-ikiwiki.diff>
 
