--- a/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
+++ b/doc/bugs/ikiwiki.setup_require_blank_rcs_to_work_as_cgi_only.mdwn
@@ -24,7 +24,7 @@ Should it be documented ?
 >> push changes back. What I do is use svk, which is a distributed RCS based on svn, edit using text editors on my
 >> laptop, and periodically `svk push` up to the server, which triggers a rebuild on the server. I think [[Joey]] 
 >> works this way too, but I'm not sure. If you don't like editing pages "by hand" then maybe you should look at
->> [[git]] or [[mercurial]] -- they should theoretically allow you to run apache on a working copy which is itself
+>> [[rcs/git]] or [[rcs/mercurial]] -- they should theoretically allow you to run apache on a working copy which is itself
 >> a branch of a working copy running on another machine, but I haven't used them so I don't know. --Ethan
 
 >>> Well, by hand editing is just what I'm making sometime. it's just using subversion, in fact.
