--- a/doc/css_market.mdwn
+++ b/doc/css_market.mdwn
@@ -11,7 +11,7 @@ files..)
 
 * **[[css_market/kirkambar.css]]**, contributed by [[Roktas]].  This far from perfect
   stylesheet follows a [Gitweb](http://www.kernel.org/git/?p=git/git.git;a=tree;f=gitweb)
-  like theme, so it may provide a consistent look'n feel along with the [[git]] backend. ;-)
+  like theme, so it may provide a consistent look'n feel along with the [[rcs/git]] backend. ;-)
   You can see it in action on [kirkambar](http://kirkambar.net/) (Turkish content).
   [[meta stylesheet="kirkambar"]]
 
