--- a/doc/recentchanges.mdwn
+++ b/doc/recentchanges.mdwn
@@ -1,4 +1,3 @@
-ikiwiki generates the list of recent changes by examining the
-history of the revision control system ([[Subversion]], etc) that the wiki
-is configured to use. You have to have [[CGI]] set up for this feature to be
-enabled.
+ikiwiki generates the list of recent changes by examining the history of
+the [[revision_control_system|rcs]] that the wiki is configured to use. You
+have to have [[CGI]] set up for this feature to be enabled.
