--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -6,7 +6,7 @@ Projects
 * [Planet Debian upstream](http://updo.debian.net/)
 * The [ion window manager homepage](http://modeemi.fi/~tuomov/ion/)
 * [Debian Mentors wiki](http://jameswestby.net/mentors/)
-* [LinuxWorld.com's monkey.linuxworld.com contributor wiki](http://monkey.linuxworld.com/) ([[Git]] backend)
+* [LinuxWorld.com's monkey.linuxworld.com contributor wiki](http://monkey.linuxworld.com/) ([[rcs/Git]] backend)
 * The [Sparse wiki](http://kernel.org/pub/linux/kernel/people/josh/sparse).
 * [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
 * The [maildirman wiki](http://svcs.cs.pdx.edu/maildirman)
@@ -18,7 +18,7 @@ Projects
 * [debian-community.org](http://debian-community.org/)
 * The [cairo graphics library](http://cairographics.org/) website.
 * [Nouvelles Informations Positives Libres community](http://wiki.nipl.net/)
-* The [Portland State Aerospace Society](http://psas.pdx.edu) website.  Converted from a combination of TWiki and MoinMoin to ikiwiki, including full history ([[Git]] backend).
+* The [Portland State Aerospace Society](http://psas.pdx.edu) website.  Converted from a combination of TWiki and MoinMoin to ikiwiki, including full history ([[rcs/Git]] backend).
 
 Personal sites and blogs
 ========================
@@ -37,7 +37,7 @@ Personal sites and blogs
 * [Christian Aichinger's homepage](http://greek0.net/)
 * [Ben A'Lee's homepage](http://bmalee.eu/~bma/)
 * [Adam  Shand's homepage](http://adam.shand.net/iki/)
-* [Recai Oktaş's homepage](http://kirkambar.net/) (uses [[Git]] backend, Turkish language only).
+* [Recai Oktaş's homepage](http://kirkambar.net/) (uses [[rcs/Git]] backend, Turkish language only).
 * [Hess family wiki](http://kitenet.net/~family/)
 * [Stefano Zacchiroli's blog](http://www.bononia.it/~zack/blog/)
 * [Taquiones: Victor Moral's personal website in Spanish](http://taquiones.net)
