--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,8 +1,8 @@
-Ikiwiki is a **wiki compiler**. It converts wiki pages
-into HTML pages suitable for publishing on a website. Ikiwiki stores
-pages and history in a revision control system such as [[Subversion]]
-or [[Git]]. There are many other [[features]], including support for
-[[blogging|blog]], as well as a large array of [[plugins]].
+Ikiwiki is a **wiki compiler**. It converts wiki pages into HTML pages
+suitable for publishing on a website. Ikiwiki stores pages and history in a
+[[revision_control_system|rcs]] such as [[rcs/Subversion]] or [[rcs/Git]].
+There are many other [[features]], including support for [[blogging|blog]],
+as well as a large array of [[plugins]].
 
 [[template id=links]]
 
