--- a/doc/rcs/tla.mdwn
+++ b/doc/rcs/tla.mdwn
@@ -6,3 +6,5 @@ Ikiwiki can run as a [[post-commit]] hook to update a wiki whenever commits
 come in. When running as a [[cgi]] with tla, ikiwiki automatically
 commits edited pages to the Arch repostory, and uses the Arch
 log to generate the [[RecentChanges]] page.
+
+Note that the tla support needs the [[cpan MailTools]] perl module.
