--- a/doc/TourBusStop.mdwn
+++ b/doc/TourBusStop.mdwn
@@ -4,7 +4,7 @@ This wiki serves as the home for the ikiwiki wiki engine, providing collaborativ
 
 [[ikiwiki|/index]] provides a wiki engine with several [[/features]] unique or uncommon amongst wiki engines:
 
-* Rather than inventing yet another simplistic, linear version control system, ikiwiki uses a standard version control system such as [[rcs/Subversion]] or [[rcs/Git]].  You can edit a wiki by committing to your repository, as well as through a traditional web interface.  This makes ikiwiki ideal for collaborative software development; just keep your wiki in version control next to your software.  You can also take full advantage of the features of these systems; for instance, you can keep a local branch of your wiki via [[rcs/Git]].
+* Rather than inventing yet another simplistic, linear version control system, ikiwiki uses a standard version control system such as [[Subversion|rcs/svn]] or [[rcs/Git]].  You can edit a wiki by committing to your repository, as well as through a traditional web interface.  This makes ikiwiki ideal for collaborative software development; just keep your wiki in version control next to your software.  You can also take full advantage of the features of these systems; for instance, you can keep a local branch of your wiki via [[rcs/Git]].
 
 * You can turn any set of pages into a [[blog]] or similar news feed, complete with RSS and Atom support.  You can run your weblog on ikiwiki (and [[many people do|ikiwikiusers]]), run a Planet-like [[aggregator|plugins/aggregate]] for external feeds, or keep a [[TODO]] and [[bug|bugs]] list with tags for completed items.
 
