--- a/doc/todo/language_definition_for_the_meta_plugin.mdwn
+++ b/doc/todo/language_definition_for_the_meta_plugin.mdwn
@@ -68,4 +68,4 @@ This may be useful for sites with a few pages in different languages, but no ful
 </pre>
 
 
-[[tag wishlist patch plugin/meta translation]]
+[[tag wishlist patch plugins/meta translation]]
