--- a/doc/todo/rst_plugin_python_rewrite.mdwn
+++ b/doc/todo/rst_plugin_python_rewrite.mdwn
@@ -1,5 +1,5 @@
-The [[plugin/rst]] plugin is slow because it forks python for each page
+The [[plugins/rst]] plugin is slow because it forks python for each page
 rendered. Now that ikiwiki supports plugins written in
-[[other_languages|plugin/write/external]], it would be excellent if someone
+[[other_languages|plugins/write/external]], it would be excellent if someone
 could rewrite the rst plugin as a pure python external plugin. It would
 then run nice and quick.
